--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,12 @@
         left: 0;
         background-color: black;
         width: 100%;
-        height: 900px;
+        height: 100vh;
         opacity : 0.5;
         z-index: -1;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
         
     }
     .body:after {
@@ -25,12 +28,12 @@
         left: 0;
         background-image: url("https://i.imgur.com/QKABM6x.jpg"); 
         width: 100%;
-        height: 900px;
+        height: 100vh;
         opacity : 0.7;
         z-index: -2;
         background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+        background-size: cover;
+        background-position: center;
     }
 
 
