--- a/src/Component/Login/Login.css
+++ b/src/Component/Login/Login.css
@@ -1,10 +1,10 @@
-.ship-form{
+.booking-form{
     margin: 30px 100px;
     border: 1px solid black;
     padding: 10px 0;
 }
 
-.ship-form input {
+.booking-form input {
     display: block;
     margin: 0 auto;
     margin-top: 30px;
